fixed footer on mobile

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6102,4 +6102,8 @@ body {
     color: white;
     margin: 5px; }
   .btn-intro:hover {
-    background-color: white; } }
+    background-color: white; }
+  body {
+    margin-bottom: 509px; }
+  #footer {
+    height: 509px; } }
