--- a/public/styles/site/_mobile.scss
+++ b/public/styles/site/_mobile.scss
@@ -35,3 +35,12 @@
 .btn-intro:hover {
   background-color: white;
 }
+
+
+body {
+  margin-bottom: 509px;
+}
+
+#footer {
+  height: 509px;
+}
